# brainstormers

./: .gitignore  app.py  big_mind_mapping.py  pyproject.toml  readme.md  requirements.txt  reverse_brainstorm.py  role_storming.py  scamper.py  six_hats.py  starburtsting.py  utils.py
methods/: role_storming.py  scamper.py
