[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brainstorming_app"
version = "0.1.0"
description = "A LangChain and Streamlit app for optimized brainstorming using structured methods."
authors = [
    {name = "AIT SAID Azzedine Idir", email = "ja_aitsaid@esi.dz"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["brainstorming", "langchain", "streamlit", "LLM"]

dependencies = [
    "langchain_core==0.3.15",
    "langchain_openai==0.2.5",
    "python-dotenv==1.0.1",
    "streamlit==1.38.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88


[tool.isort]
profile = "black"

[tool.mypy]
strict = true
